--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: golangci-lint
-      uses: golangci/golangci-lint-action@6317259e28065ecd33bf7e7e6c67c77db091d8a4  # v2.2.0
+      uses: golangci/golangci-lint-action@v2
       with:
-        version: v1.30
+        version: v1.35.2
